# actix-template

./: Cargo.toml  Dockerfile  README.md
.github/: notify_pipeline.sh
.github/workflows/: build.yaml  rust-clippy.yaml
src/: cli.rs  main.rs  metrics.rs
sslexample/: server-cert.pem  server.key
