[package]
name = "actix-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-tls = { version = "3.0.3", features = ["rustls"] }
actix-web = { version = "4.2.1", features = ["rustls", "secure-cookies"] }
actix-web-opentelemetry = { version = "0.13.0", features = ["metrics", "metrics-prometheus"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-prometheus = "0.11.0"
prometheus = { version = "0.13.3", features = ["process"] }
rustls = { version = "0.20.7" }
rustls-pemfile = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
